Fixed bug with sticky header overlapping content

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -5,8 +5,11 @@ ul {
   overflow: hidden;
   background-color: #ea526f;
   position: -webkit-sticky;
-  position: sticky;
+  position: fixed;
+  width: 100%;
   top: 0;
+  left: 0;
+  z-index: 9999;
 }
 
 li {
